<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.rotterdam.nl-design-system</groupId>
    <artifactId>rotterdam-nlds-parent</artifactId>
    <version>0.0.6-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Rotterdam, NL Design System Parent</name>
    <description>NL Design System Parent POM made by Gemeente Rotterdam. Used for Java libraries related to NL Design System.</description>
    <url>https://github.com/nl-design-system/rotterdam/</url>

    <licenses>
        <license>
            <name>EUPL-1.2 license</name>
            <url>https://eupl.eu/1.2/en/</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>team-mijnloket</id>
            <name>team-mijnloket</name>
            <email>mijnloket_ontwikkelteam@Rotterdam.onmicrosoft.com</email>
            <organization>Gemeente Rotterdam</organization>
            <organizationUrl>https://www.rotterdam.nl</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>rotterdam-nlds-parent-wicket</module>
    </modules>

    <scm>
        <connection>scm:git:git://github.com/nl-design-system/rotterdam.git</connection>
        <developerConnection>scm:git:ssh://github.com:nl-design-system/rotterdam.git</developerConnection>
        <url>https://github.com/nl-design-system/rotterdam/tree/main</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <node.version>v22.19.0</node.version>
        <pnpm.version>10.17.0</pnpm.version>
        <central-publishing.autoPublish>true</central-publishing.autoPublish>
        <central-publishing.waitUntil>published</central-publishing.waitUntil>
    </properties>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.github.ekryd.sortpom</groupId>
                    <artifactId>sortpom-maven-plugin</artifactId>
                    <version>4.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.12.0</version>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>0.9.0</version>
                </plugin>
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>1.15.1</version>
                    <configuration>
                        <nodeVersion>${node.version}</nodeVersion>
                        <pnpmVersion>${pnpm.version}</pnpmVersion>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>install-node-and-corepack</id>
                        <goals>
                            <goal>install-node-and-corepack</goal>
                        </goals>
                        <phase>generate-resources</phase>
                    </execution>
                    <execution>
                        <id>pnpm-install</id>
                        <goals>
                            <goal>corepack</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <arguments>pnpm install</arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>pnpm-run-build</id>
                        <goals>
                            <goal>corepack</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <!-- Pass contents of package.json "scripts"/"build" script.
                            Cannot use 'pnpm run build', as pnpm calling pnpm is not supported from Maven. -->
                            <arguments>pnpm --recursive run build</arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.5.0</version>
                <inherited>false</inherited>
                <configuration>
                    <filesets>
                        <!-- Clean node directory -->
                        <fileset>
                            <directory>${project.basedir}/node</directory>
                            <includes>
                                <include>**/*</include>
                            </includes>
                        </fileset>
                        <!-- Clean node_modules directory -->
                        <fileset>
                            <directory>${project.basedir}/node_modules</directory>
                            <includes>
                                <include>**/*</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
                <configuration>
                    <createBackupFile>false</createBackupFile>
                    <nrOfIndentSpace>4</nrOfIndentSpace>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>sort</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>central-sonatype-release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central-sonatype</publishingServerId>
                            <autoPublish>${central-publishing.autoPublish}</autoPublish>
                            <waitUntil>${central-publishing.waitUntil}</waitUntil>
                            <excludeArtifacts>
                                <artifact>docs-wicket</artifact>
                            </excludeArtifacts>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <failOnError>false</failOnError>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <configuration>
                            <bestPractices>true</bestPractices>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <phase>verify</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
